<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homeback"
    android:orientation="vertical"
    tools:context=".Activity.AddEventActivity">

    <RelativeLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:importantForAccessibility="no"
            android:src="@drawable/icarrow_back_ios_24" />

        <TextView
            android:layout_toStartOf="@+id/imgDelete"
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@+id/imgBack"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/add_event"
            android:textColor="@color/black"
            android:textSize="18sp"

            />

        <ImageView
            android:id="@+id/imgDelete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:importantForAccessibility="no"
            android:src="@drawable/icdelete_outline_24" />
    </RelativeLayout>

    <View
        android:id="@+id/vv"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ashblue" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingHorizontal="5dp">


            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/enter_event_title"
                android:padding="17dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:hint="@string/enter_event_description"
                android:inputType="textMultiLine"
                android:padding="17dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:focusable="false"
                android:hint="@string/select_event_time"
                android:padding="12dp"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>