<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homeback"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:id="@+id/toplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue">

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/topcurve" />
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/toplay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/study" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnStart"
        android:layout_below="@+id/lottieAnimationView"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/blue"
            android:textSize="29sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtdes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/homedes"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>


    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bottom_shade"
        android:text="@string/getstart"
        android:textSize="20sp"
        app:backgroundTint="@null" />
</RelativeLayout>
