<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="20dp"
                android:id="@+id/applogo"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:importantForAccessibility="no"
                android:src="@drawable/logo"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:letterSpacing="0.1"
                android:text="@string/nonet"
                android:textColor="@color/blue"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/nonetdes"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                />

            <TextView
                android:layout_marginTop="40dp"
                android:id="@+id/btnRetry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="17dp"
                android:background="@drawable/bottom_shade"
                android:gravity="center"
                android:letterSpacing="0.05"
                android:paddingVertical="6dp"
                android:text="@string/tryagain"
                android:fontFamily="@font/roboto"
                android:textColor="@color/white"
                android:textSize="22sp"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>